--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,9 +17,9 @@
 <main role="main" class="container" id="main">
   <h1>Conway’s Game Of Life</h1>
   <a href="https://www.geeksforgeeks.org/program-for-conways-game-of-life/">learn more</a>
-  <form action="#" th:action="@{'/clear'}">
-    <button type="submit" id="clear">clear</button>
-  </form>
+<!--  <form action="#" th:action="@{'/clear'}">-->
+<!--    <button type="submit" id="clear">clear</button>-->
+<!--  </form>-->
   <form action="#" th:action="@{'/generateRandom'}">
     <button type="submit" id="generateRandom">generate random map</button>
   </form>
