add github link

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 
 <main role="main" class="container" id="main">
   <h1>Conway’s Game Of Life</h1>
-  <a href="https://www.geeksforgeeks.org/program-for-conways-game-of-life/">learn more</a>
+  <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">learn more</a> <a href="https://github.com/juraj222/lifegame">link to source code</a>
 <!--  <form action="#" th:action="@{'/clear'}">-->
 <!--    <button type="submit" id="clear">clear</button>-->
 <!--  </form>-->
